<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jaankari</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string name="app_label">Jaankari</string>
    <string name="query_hint">Search Videos and Files</string>
    <string name="search_videos">Search Videos</string>
    <string name="title_activity_home_screen">Jaankari</string>
    <string name="logout">Logout</string>
    <string name="videos">Videos</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="stocks">Stocks</string>
    <string name="education">Education</string>
    <string name="app_id">1423921831232319</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Re-type Password</string>
    <string name="old_password">Current Password</string>
    <string name="update_password">Update!</string>
    <string name="ip_address">10.132.188.62/~rahulanishetty/OpenSoft/</string>
    <string name="home_screen">Home</string>

    <string-array name="profile_updates">
        <item>Update Profile Picture</item>
        <item>Update Password</item>
    </string-array>

    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_update_password">Update Password</string>
    <string name="menu_update_profile_pic">Update Profile Pic</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="title_activity_update_profile_pic">UpdateProfilePicActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_section1">Popular</string>
    <string name="title_section2">Recommended</string>
    <string name="title_section3">History</string>
    <string name="news_title_section1">Top Stories</string>
    <string name="news_title_section2">World</string>
    <string name="news_title_section3">Business</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="news_section_1">Top Stories</string>
    <string name="news_section_2">World</string>
    <string name="news_section_3">India</string>
    <string name="news_section_4">Business</string>
    <string name="news_section_5">Technology</string>
    <string name="news_section_6">Sports</string>
    <string name="news_section_7">Entertainment</string>
    <string name="title_activity_news_main">NewsMainActivity</string>
    <string name="title_activity_health_list">HealthListActivity</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="title_activity_commodity">CommodityActivity</string>
    <string name="title_activity_result_viewer">ResultViewer</string>

</resources>
