<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jaangari.opensoft.iitkgp.jaankari.HomeScreenActivity">

    <item android:id="@+id/action_search"
        android:title="@string/query_hint"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!--<item android:id="@+id/pro_pic_menu"-->
        <!--android:title="Profile Pic"-->
        <!--android:icon="@drawable/default_profile_pic"-->
        <!--app:showAsAction="ifRoom|collapseActionView"-->
        <!--app:actionViewClass="android.app.v7.widget.ImageView" />-->

    <!--<item-->
        <!--android:id="@+id/update_profile_picture"-->
        <!--android:title="@string/menu_update_profile_pic"/>-->
    <item
        android:id="@+id/update_password"
        android:title="@string/menu_update_password"/>

    <item android:id="@+id/logout_home_screen" android:title="@string/logout" app:showAsAction="withText|ifRoom" />


</menu>
