<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#2D3E50"
    tools:context="jaangari.opensoft.iitkgp.jaankari.PasswordChangeActivity">

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/old_password"
        android:paddingBottom="10dp"
        android:id="@+id/old_password_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="130dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_password"
        android:id="@+id/new_password_textView"
        android:layout_below="@+id/old_password_textView"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/retype_new_password"
        android:id="@+id/retype_new_password_textView"
        android:layout_below="@+id/new_password_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:onClick="changePassword"
        android:id="@+id/update_password_button"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/retype_new_password_editText"
        android:layout_toRightOf="@+id/new_password_textView"
        android:layout_toEndOf="@+id/new_password_textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/retype_new_password_editText"
        android:layout_alignTop="@+id/retype_new_password_textView"
        android:layout_toEndOf="@+id/retype_new_password_textView"
        android:layout_toRightOf="@+id/retype_new_password_textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/new_password_editText"
        android:layout_above="@+id/retype_new_password_editText"
        android:layout_alignLeft="@+id/retype_new_password_editText"
        android:layout_alignStart="@+id/retype_new_password_editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/old_password_editText"
        android:layout_above="@+id/new_password_textView"
        android:layout_alignLeft="@+id/new_password_editText"
        android:layout_alignStart="@+id/new_password_editText"/>

</RelativeLayout>
