<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#4A89DC"
    tools:context="jaangari.opensoft.iitkgp.jaankari.HomeScreen">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!--<TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:textStyle="bold" android:textSize="50sp" android:gravity="center"/>-->
    <!--    android:text="@string/dummy_content" /> -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:id="@+id/frame_home_screen"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="230dp"
                android:layout_height="150dp"
                android:text="@string/videos"
                android:onClick="videoIntent"
                android:clickable="true"
                android:background="@drawable/videos"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="16dp"
                android:id="@+id/videos_textView"
                android:textColor="#ffffffee"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:padding="16dp"
                android:background="@drawable/news"
                android:onClick="newsIntent"
                android:clickable="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/news"
                android:id="@+id/news_textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/videos_textView"
                android:layout_toEndOf="@+id/videos_textView"
                android:layout_alignTop="@+id/videos_textView"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="16dp"
                android:id="@+id/weather_rel_layout"
                android:layout_below="@+id/videos_textView"
                android:layout_toLeftOf="@+id/news_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/weather_bg"
                >

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:text="Kharagpur, IN"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cloudy"
                    android:layout_below="@+id/cityName"
                    android:id="@+id/weatherIcon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp"
                    android:layout_below="@+id/cityName"
                    android:layout_alignParentEnd="true"
                    android:text="20\u00B0"
                    android:textStyle="bold"
                    android:textSize="50dp"
                    android:textIsSelectable="true"
                    android:textColor="#ffffffff"
                    android:paddingTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weatherIcon"
                    android:id="@+id/humidity"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#ffffffff"
                    android:text="60 % Humidity"
                    android:layout_centerHorizontal="true"
                    />



                </RelativeLayout>

            <!--TextView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="16dp"
                android:clickable="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weather"
                android:padding="16dp"
                android:id="@+id/weather_textView"
                android:layout_below="@+id/videos_textView"
                android:layout_toLeftOf="@+id/news_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#ffffffff"
                android:textStyle="bold" /-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:clickable="true"
                android:text="@string/stocks"
                android:padding="16dp"
                android:background="@drawable/stocks"
                android:id="@+id/stocks_textView"
                android:layout_alignTop="@+id/weather_rel_layout"
                android:layout_toRightOf="@+id/weather_rel_layout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/weather_rel_layout"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="16dp"
                android:id="@+id/education_textView"
                android:layout_below="@+id/weather_rel_layout"
                android:layout_toLeftOf="@+id/stocks_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/books"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Education"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:clickable="true"
                android:onClick="healthIntent"
                android:text="Health"
                android:padding="16dp"
                android:background="@drawable/health"
                android:id="@+id/health_textView"
                android:layout_alignTop="@+id/education_textView"
                android:layout_toRightOf="@+id/education_textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/education_textView"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

        </RelativeLayout>


        <!---->
        <!--<Spinner-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_gravity="right|top"-->
            <!--android:entries="@array/profile_updates"-->
            <!--android:id="@+id/spinner_homeScreen_layout"-->
            <!--android:spinnerMode="dialog" />-->
        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/home_screen_layout"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_gravity="top|right">-->
            <!--</LinearLayout>-->
        <!--<ListView-->
            <!--android:id="@+id/home_screen_list"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_gravity="right|top"-->
            <!--android:theme="@style/Base.Widget.AppCompat.ListView.DropDown"-->
            <!--android:onClick="profilePreferences">-->
            <!--</ListView>-->

    </FrameLayout>


</FrameLayout>
